Closed
Bug 1621518
Opened 5 years ago
Closed 5 years ago
[GCC] dom/canvas/ClientWebGLContext.h:829:5: error: format not a string literal and no format arguments [-Werror=format-security]
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla76
Tracking | Status | |
---|---|---|
firefox76 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
Details
Attachments
(1 file)
No description provided.
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/59ace56d7ed7
Fix build errors with -Werror=format-security with GCC. r=jgilbert
Comment 3•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in
before you can comment on or make changes to this bug.
Description
•