Bug 1621518 - Fix build errors with -Werror=format-security with GCC. r=jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D66355

--HG--
extra : moz-landing-system : lando