dom/canvas/WebGLContext.h
@@ -398,10 +398,15 @@ class WebGLContext : public VRefCounted, public SupportsWeakPtr<WebGLContext> {
 #ifdef __clang__
 #  pragma clang diagnostic push
 #  pragma clang diagnostic ignored "-Wformat-security"
+#elif defined(__GNUC__)
+#  pragma GCC diagnostic push
+#  pragma GCC diagnostic ignored "-Wformat-security"
 #endif
     text.AppendPrintf(fmt, args...);
 #ifdef __clang__
 #  pragma clang diagnostic pop
+#elif defined(__GNUC__)
+#  pragma GCC diagnostic pop
 #endif
 
     GenerateErrorImpl(err, text);
@@ -1245,10 +1250,15 @@ class WebGLContext : public VRefCounted, public SupportsWeakPtr<WebGLContext> {
 #ifdef __clang__
 #  pragma clang diagnostic push
 #  pragma clang diagnostic ignored "-Wformat-security"
+#elif defined(__GNUC__)
+#  pragma GCC diagnostic push
+#  pragma GCC diagnostic ignored "-Wformat-security"
 #endif
     msg.AppendPrintf(fmt, args...);
 #ifdef __clang__
 #  pragma clang diagnostic pop
+#elif defined(__GNUC__)
+#  pragma GCC diagnostic pop
 #endif
 
     GenerateErrorImpl(0, msg);
